<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/desc1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/alarmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/stop_alarm"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/battery_state"
        app:layout_constraintBottom_toTopOf="@+id/alarmBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/no_battery" />

    <ImageView
        android:id="@+id/imageView_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/battery_alarm"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/alarmBtn"
        app:layout_constraintStart_toStartOf="@+id/alarmBtn"
        app:srcCompat="@drawable/battery_alarm" />

    <ImageView
        android:id="@+id/imageView_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/battery_charge"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_battery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView_battery"
        app:srcCompat="@drawable/battery_charge" />
</androidx.constraintlayout.widget.ConstraintLayout>